<resources>
    <string name="app_name">Runney</string>
    <string name="app_desc">Find your next running race</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="nav_home">Αρχική</string>
    <string name="races">Αγώνες</string>
    <string name="nav_profile">Προφίλ</string>
    <string name="register_btn_login_screen">Dont have an account? <b>Register</b></string>

    <string name="dummy_user">Στάθης Καραδημητρίου</string>
    <string name="dummy_user_img">"http://www.runningnews.gr/lib_photos/news21a/03/2021_03_05_cure.jpg"</string>
    <string name="edit_profile">Επεξεργασία Προφίλ</string>
    <string name="favorites">Αγαπημένα</string>
    <string name="bookmarks">Σελιδοδείκτες</string>
    <string name="settings">Ρυθμίσεις</string>

    <string name="news">Νέα</string>
    <string name="article">Άρθρα</string>
    <string name="running_races">Αγώνες Δρόμου</string>
    <string name="something_else">Κάτι Άλλο</string>

    <string name="e_mail_hint">E-mail</string>
    <string name="pass_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="create_account_btn">Create account</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="login_btn">Login</string>
    <string name="search_topics_header">Topics</string>
    <string name="profile_edit_underlined"><u>EDIT PROFILE</u></string>
    <string name="dark_mode_header">DARK MODE</string>
    <string name="lorem_ipsum">Lorem Ipsum sit dolor amet</string>
    <string name="long_text">Curabitur luctus viverra tempor. In lacinia cursus est, eu consectetur lectus auctor ut. Aenean in tempus dui, dignissim vestibulum odio. Mauris id nulla metus. Morbi tincidunt et nulla vitae tristique. Maecenas sagittis libero in augue egestas lacinia. Donec lobortis consequat leo a convallis. Nullam vitae lacus at lorem interdum dignissim. Curabitur nunc nibh, fermentum in consectetur id, consectetur vel diam. Nulla non dignissim magna. Morbi quis tellus non metus tristique molestie. Etiam pretium dignissim purus quis rutrum. Ut ac tempor nunc. Integer ultrices arcu at nisl fringilla volutpat nec rhoncus sem. Nam massa urna, varius in nisl id, molestie varius turpis. Fusce faucibus urna erat, id efficitur sapien vestibulum sit amet.</string>
    <string name="cost">Κόστος</string>
    <string name="location">Τόπος</string>
    <string name="when">Διεξαγωγή</string>
    <string name="greeting">Hello</string>
    <string name="nav_seach">Αναζήτηση</string>

    <string name="title_uppercase">TITLE</string>
    <string name="dummy_title">Lorem Ipsum sit dolor amet</string>
    <string name="dummy_img">http://www.runningnews.gr/lib_photos/news21a/03/2021_03_05_cure.jpg</string>
    <string name="favorite">Favorite</string>
    <string name="share">Share</string>

</resources>