<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen_16"
    android:background="@color/app_bg"
    tools:context=".features.login.LoginActivity">

    <ImageView
        android:id="@+id/login_img"
        android:layout_width="@dimen/image_85"
        android:layout_height="@dimen/image_85"
        android:layout_marginTop="@dimen/dimen_30"
        android:contentDescription="@string/app_name"
        android:src="@drawable/placeholder"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        style="@style/text_h2_dark"
        android:padding="@dimen/dimen_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_img" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20"
        android:hint="@string/e_mail_hint"
        app:layout_constraintTop_toBottomOf="@id/login_app_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20"
        android:hint="@string/pass_hint"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/emailField">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass_input_field"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:layout_height="wrap_content"
            android:background="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="0dp"
        android:layout_height="@dimen/default_btn_height"
        android:layout_marginTop="@dimen/dimen_30"
        android:backgroundTint="@color/blue1"
        android:text="@string/login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passField" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_10"
        android:text="@string/forgot_your_password"
        app:layout_constraintTop_toBottomOf="@id/login_btn" />

    <TextView
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="@dimen/dimen_10"
        android:text="@string/register_btn_login_screen"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>