<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen_16"
    android:background="@color/app_bg"
    tools:context=".features.register.RegisterActivity">

    <ImageView
        android:id="@+id/register_img"
        android:layout_width="@dimen/image_85"
        android:layout_height="@dimen/image_85"
        android:layout_marginTop="@dimen/dimen_30"
        android:background="@drawable/placeholder"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/register_app_name"
        style="@style/text_h2_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_16"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_img" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20"
        android:hint="@string/e_mail_hint"
        app:layout_constraintTop_toBottomOf="@id/register_app_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16"
        android:hint="@string/pass_hint"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/emailField">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass_input_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passVerifyField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/passField">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass_conf_input_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_btn_height"
        android:layout_marginBottom="@dimen/dimen_20"
        android:backgroundTint="@color/blue1"
        android:text="@string/create_account_btn"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>